manifests/modules/data-connect-hub/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: data-connect-hub-ui
  labels:
    app.kubernetes.io/name: data-connect-hub
    app.kubernetes.io/part-of: odh-dashboard
    components.platform.opendatahub.io/managed-by: opendatahub-operator
spec:
  replicas: 1
  selector:
    matchLabels:
      deployment: data-connect-hub-ui
  template:
    metadata:
      labels:
        deployment: data-connect-hub-ui
        app.kubernetes.io/name: data-connect-hub
        app.kubernetes.io/part-of: odh-dashboard
        components.platform.opendatahub.io/managed-by: opendatahub-operator
    spec:
      automountServiceAccountToken: false
      serviceAccountName: odh-dashboard-data-connect-hub-ui
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchLabels:
                    deployment: data-connect-hub-ui
                topologyKey: topology.kubernetes.io/zone
      volumes:
        - name: tmp
          emptyDir:
            sizeLimit: 100Mi
        - name: modules-sa-token
          projected:
            defaultMode: 420
            sources:
              - serviceAccountToken:
                  expirationSeconds: 3607
                  path: token
              - configMap:
                  name: kube-root-ca.crt
                  items:
                    - key: ca.crt
                      path: ca.crt
              - downwardAPI:
                  items:
                    - path: namespace
                      fieldRef:
                        fieldPath: metadata.namespace
              - configMap:
                  name: openshift-service-ca.crt
                  items:
                    - key: service-ca.crt
                      path: service-ca.crt
        - name: proxy-tls
          secret:
            secretName: data-connect-hub-proxy-tls
        - name: odh-trusted-ca-cert
          configMap:
            name: odh-trusted-ca-bundle
            optional: true
            items:
              - key: ca-bundle.crt
                path: odh-trusted-ca-bundle.crt
        - name: odh-ca-cert
          configMap:
            name: odh-trusted-ca-bundle
            optional: true
            items:
              - key: odh-ca-bundle.crt
                path: odh-ca-bundle.crt
      containers:
        - name: data-connect-hub-ui
          image: data-connect-hub-ui-image
          imagePullPolicy: Always
          livenessProbe:
            httpGet:
              path: /healthcheck
              port: 9143
              scheme: HTTPS
            initialDelaySeconds: 30
            timeoutSeconds: 15
            periodSeconds: 30
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /healthcheck
              port: 9143
              scheme: HTTPS
            initialDelaySeconds: 15
            timeoutSeconds: 15
            periodSeconds: 30
            successThreshold: 1
            failureThreshold: 3
          resources:
            requests:
              cpu: 10m
              memory: 64Mi
              ephemeral-storage: 10Mi
            limits:
              cpu: 100m
              memory: 192Mi
              ephemeral-storage: 10Mi
          ports:
            - containerPort: 9143
              name: data-connect-hub
          volumeMounts:
            - name: tmp
              mountPath: /tmp
            - name: proxy-tls
              mountPath: /etc/tls/private
              readOnly: true
            - name: odh-trusted-ca-cert
              mountPath: /etc/pki/tls/certs/odh-trusted-ca-bundle.crt
              subPath: odh-trusted-ca-bundle.crt
              readOnly: true
            - name: odh-trusted-ca-cert
              mountPath: /etc/ssl/certs/odh-trusted-ca-bundle.crt
              subPath: odh-trusted-ca-bundle.crt
              readOnly: true
            - name: odh-ca-cert
              mountPath: /etc/pki/tls/certs/odh-ca-bundle.crt
              subPath: odh-ca-bundle.crt
              readOnly: true
            - name: odh-ca-cert
              mountPath: /etc/ssl/certs/odh-ca-bundle.crt
              subPath: odh-ca-bundle.crt
              readOnly: true
            - name: modules-sa-token
              mountPath: /var/run/secrets/kubernetes.io/serviceaccount
              readOnly: true
          args:
            - '--auth-method=user_token'
            - '--auth-token-header=x-forwarded-access-token'
            - '--auth-token-prefix='
            - '--port=9143'
            - '--cert-file=/etc/tls/private/tls.crt'
            - '--key-file=/etc/tls/private/tls.key'
            - '--bundle-paths=/etc/pki/ca-trust/extracted/pem/tls-ca-bundle.pem,/var/run/secrets/kubernetes.io/serviceaccount/ca.crt,/var/run/secrets/kubernetes.io/serviceaccount/service-ca.crt,/etc/pki/tls/certs/odh-ca-bundle.crt,/etc/pki/tls/certs/odh-trusted-ca-bundle.crt'
            - '--gateway-namespace=openshift-ingress'
            - '--gateway-name=data-science-gateway'
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
