manifests/modules/data-connect-hub/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: odh-dashboard-data-connect-hub-ui
  annotations:
    service.beta.openshift.io/serving-cert-secret-name: data-connect-hub-proxy-tls
    service.beta.kubernetes.io/backend-protocol: HTTPS
spec:
  selector:
    deployment: data-connect-hub-ui
  ports:
    - name: data-connect-hub-ui
      protocol: TCP
      port: 9243
      targetPort: 9243
